# aptos_intent_bid_move

./: .coverage_map.mvcov  .gitignore  LICENSE  Move.toml
bidding_system/: .env  .env.example  README.md  common_bidding.py  deploy_system.py  init_service_agent.sh  monitor_state.json  personal_agent_cli.py  pyproject.toml  requirements.txt  service_agent_monitor.py  setup.sh
scripts/intent-bid-scripts/: README.md  cancel_task.py  common_bidding.py  complete_task.py  deploy_bidding.py  place_bid.py  publish_task.py  pyproject.toml  requirements.txt  select_winner.py  view_platform.py  view_task.py
scripts/task-manager-scripts/: cancel_task.py  common.py  complete_task.py  create_task.py  deploy_dev.sh  interact.sh
sources/: bidding_system.move  match_system.move  task_manager.move
tests/: bidding_system_test.move  match_system_tests.move  task_manager_tests.move
